@startuml
skinparam classAttributeIconSize 0

package BusinessLogic{
    class FacadeUser{
        - addPoints(int nbPoints, User user)
        - removePoints(int nbPoints, User user)
        + {static} getInstance() : FacadeUser
    }

    abstract class Factory{
        + {static} getInstance() : Factory
        + CreateUserDAO() : UserDAO
    }
    class MySQLFactory{
        - db : Connection
        + CreateUserDAO() : UserDAO
        - openConnection()
        - closeConnection()
    }

    Factory <|-up- MySQLFactory
}

package DAO{

    abstract class UserDAO{
        + {static} getInstance() : UserDAO
        + addPoints(int nbPoints, User user)
        + removePoints(int nbPoints, User user)
    }

    class MySQLUserDAO{
        - DB : Connection
        + addPoints(int nbPoints, User user)
        + removePoints(int nbPoints, User user)

    }

    MySQLUserDAO --|> UserDAO
    MySQLUserDAO <.right. MySQLFactory : creates

    Factory <.. UserDAO : creates
    UserDAO <-right- FacadeUser
}

@enduml